feat: ✨ 后台首页布局完成

--- a/src/assets/style/theme.less
+++ b/src/assets/style/theme.less
@@ -1,6 +1,5 @@
 // 修改ant默认样式 自定义主题
-// @primary-color: #2d69ec; // 全局主色
-// @primary-color: red; // 全局主色
+@primary-color: #2d69ec; // 全局主色
 @warning-color: #ffb825;
 @success-color: #2dcede;
 @error-color: #f76359;
@@ -8,15 +7,8 @@
 @text-color-secondary: #696b73;
 
 // 列表鼠标悬停 表格斑马线背景色
-// @table-row-hover-bg: @background-color-light;
 // @table-header-bg: #ffffff;
-// @component-background: red;
-
-// @table-row-hover-bg: green;
-// @table-selected-row-bg: green;
-// @item-hover-bg: red;
-// @table-bg: red;
-
+@table-row-hover-bg: #e9f3ff;
 // 按钮禁用
 @btn-disable-bg: #b9bcbf;
 
