--- a/src/assets/style/antd.less
+++ b/src/assets/style/antd.less
@@ -1,3 +1,11 @@
+/*
+ * @Author: linliangwei 943607147@qq.com
+ * @Date: 2023-05-19 17:16:18
+ * @LastEditors: linliangwei 943607147@qq.com
+ * @LastEditTime: 2023-05-20 20:09:18
+ * @FilePath: \Base_APP_PC\src\assets\style\antd.less
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+ */
 /* stylelint-disable at-rule-empty-line-before,at-rule-name-space-after,at-rule-no-unknown */
 @import '../color/colors';
 
