--- a/src/assets/style/theme.less
+++ b/src/assets/style/theme.less
@@ -1,3 +1,11 @@
+/*
+ * @Author: linliangwei 943607147@qq.com
+ * @Date: 2023-05-19 16:50:02
+ * @LastEditors: linliangwei 943607147@qq.com
+ * @LastEditTime: 2023-05-20 20:09:05
+ * @FilePath: \Base_APP_PC\src\assets\style\theme.less
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+ */
 // 修改ant默认样式 自定义主题
 @primary-color: #2d69ec; // 全局主色
 @warning-color: #ffb825;
