--- a/src/assets/style/theme.less
+++ b/src/assets/style/theme.less
@@ -1,8 +1,8 @@
 /*
  * @Author: linliangwei 943607147@qq.com
  * @Date: 2023-05-19 16:50:02
- * @LastEditors: linliangwei 943607147@qq.com
- * @LastEditTime: 2023-05-20 20:09:05
+ * @LastEditors: llw 943607147@qq.com
+ * @LastEditTime: 2023-05-21 18:43:19
  * @FilePath: \Base_APP_PC\src\assets\style\theme.less
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
  */
@@ -23,6 +23,8 @@
 // 边框分割线 表格内容分割线，按钮边框
 @border-color-base: #e8e9ec;
 
-@menu-item-active-bg: @primary-2;
+@menu-item-active-bg: @table-row-hover-bg;
+// @menu-item-group-title-color: red;
+// @menu-highlight-color: white;
 // 背景色、模块色、输入框背景色
 @bg: #f5fafd;
